--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -6,6 +6,10 @@ sharing: true
 footer: true
 ---
 
+<p>
+    Here are some projects of mine on GitHub:
+</p>
+
 <div id="githubRepositories"></div>
 
 <script>
@@ -17,7 +21,8 @@ footer: true
                     'PHP-DI',
                     'phpBeanstalkdAdmin',
                     'NumberTwo',
-                    'gh-pages-compiler'
+                    'gh-pages-compiler',
+                    'MniPagesBundle'
                 ],
                 'myclabs': [
                     'php-enum',
