--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -8,11 +8,11 @@ footer: true
 
 <div class="row-fluid">
     <div class="span6 thumbnail">
-        <a href="/presentations/presentation-fr/" title="Voir la présentation">
-            <img src="/images/presentations/presentation-fr.png" alt="Injection de dépendances">
+        <a href="/presentations/di-fr/" title="Voir la présentation">
+            <img src="/images/presentations/di-fr.png" alt="Injection de dépendances">
         </a>
         <h3>
-            <a href="/presentations/presentation-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
+            <a href="/presentations/di-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
         </h3>
         <p>Présentation à l'apéro PHP de l'AFUP d'octobre 2013.</p>
     </div>
