Presentation: framework interop

--- a/source/presentations/framework-interop-fr/index.html
+++ b/source/presentations/framework-interop-fr/index.html
@@ -48,20 +48,68 @@
                 </section>
 
                 <section>
-                    <h2>Interopérabilité cross-frameworks ?</h2>
+                    <h1>Interopérabilité cross-frameworks ?</h1>
+                    <h3>WTF</h3>
                 </section>
 
                 <section>
-                    <h2>Interopérabilité cross-frameworks</h2>
-                    <h3>Mais pourquoi ??</h3>
-                    <ul>
-                        <li>Application legacy à migrer : sf1, ZF1, … :'(</li>
-                        <li>Changement de framework</li>
-                        <li>Découpage d'applications en modules (Apigility de ZF2, …)</li>
-                        <li>Front-end super simple avec Silex pour le webdesigner (qui pige que dalle à PHP) et back-end Symfony super mastoc</li>
-                        <li>Ne pas se fermer des portes</li>
-                        <li>Vivre pour un idéal fait de petits poneys magiques</li>
-                    </ul>
+                    <p>Migration en douceur d'une application à un framework récent</p>
+                    <p><small>Une pensée pour ceux toujours coincés sur sf1, ZF1, …</small></p>
+                    <p><img src="img/cry.jpg"/></p>
+                </section>
+
+                <section>
+                    <p>Changement de framework</p>
+                    <p><small>« on lui avait pourtant dit au CTO que son framework <em>maison</em> c'était pas une bonne idée »</small></p>
+                </section>
+
+                <section>
+                    <p>Tirer parti du meilleur des "autres" frameworks</p>
+                    <p><small>« j'aimerai bien faire un webservice REST avec <a href="http://www.apigility.org/">Apigility</a> mais mon front est sur Symfony »</small></p>
+                </section>
+
+                <section>
+                    <p>Composer son application de modules multi-frameworks</p>
+                    <p><small>« le dev front-end, il pige que dalle à Symfony, on va lui faire développer le front-office avec Silex/Laravel, il nous cassera pas notre back-office… »</small></p>
+                </section>
+
+                <section>
+                    <p>Un peu de fun !</p>
+                    <p><small>Tiens, j'ai bien envie de tester <a href="http://phalconphp.com/fr/">Phalcon</a> moi</small></p>
+                </section>
+
+                <section>
+                    <p>Mieux structurer son code</p>
+                    <p><small>développement framework-agnostic</small></p>
+                </section>
+
+                <section>
+                    <p>Vivre pour un idéal meilleur</p>
+                    <p>Les bundles c'est cool, mais pourquoi limiter ça à Symfony ?</p>
+                    <p><img src="img/monde-meilleur.jpg" style="max-height: 300px"/></p>
+                </section>
+
+                <section>
+                    <h1>Comment ?</h1>
+                </section>
+
+                <section>
+                    <h2>Qu'est-ce qu'un framework ?</h2>
+                    <h3>2005</h3>
+                    <img src="img/old-frameworks.png"/>
+                </section>
+
+                <section>
+                    <h2>Qu'est-ce qu'un framework ?</h2>
+                    <h3>2013</h3>
+                    <img src="img/new-frameworks.png"/>
+                </section>
+
+                <section>
+                    <h2>Symfony</h2>
+                    <img src="img/symfony-repo.png"/>
+                    <p>25 composants</p>
+                    <p>1 bundle <code>FrameworkBundle</code></p>
                 </section>
 
             </div>
