Presentation: framework interop

--- a/source/presentations/framework-interop-fr/index.html
+++ b/source/presentations/framework-interop-fr/index.html
@@ -318,11 +318,19 @@ interface ContainerInterface
                     <p><a href="http://php-di.org/">php-di.org/</a></p>
                     <p>Implémentera <code>ContainerInterface</code>, en attendant :</p>
                     <ul>
-                        <li>Intégration Symfony 2</li>
+                        <li><a href="https://github.com/mnapoli/PHP-DI-Symfony2">Intégration Symfony 2</a></li>
                         <li>Intégration ZF 2</li>
                         <li>Intégration ZF 1</li>
                         <li>…</li>
                     </ul>
+                </section>
+
+                <section>
+                    <h2>Quid du container de Symfony ?</h2>
+                    <p>On le garde : toute la configuration Symfony n'est pas à refaire</p>
+                    <p>et les bundles marchent toujours !</p>
+                    <p><code>ParentAwareContainerInterface</code></p>
+                    <p>-> Chainage de containers</p>
                 </section>
 
                 <section>
@@ -348,8 +356,35 @@ web/
 
                 <section>
                     <h2>Démo time</h2>
+                    <p><a href="https://github.com/mnapoli/framework-interop">github.com/mnapoli/framework-interop</a></p>
                     <img src="img/demo.gif"/>
                     <p><small><a href="http://lesjoiesducode.fr/post/40011511492/quand-je-fais-une-demo-en-clientele">les joies du code</a></small></p>
+                </section>
+
+                <section>
+                    <h1>Aller plus loin ?</h1>
+                </section>
+
+                <section>
+                    <h2>Bundles Symfony</h2>
+                    <p>"Modules" fournissant des pages/modèles/services</p>
+                    <p>FosUserBundle</p>
+                    <p>SonataAdminBundle</p>
+                    <p>...</p>
+                </section>
+
+                <section>
+                    <h2>Modules framework-agnostic ?</h2>
+                    <img class="noborder" src="img/bundle-interop.png"/>
+                </section>
+
+                <section>
+                    <h2>Modules framework-agnostic ?</h2>
+                    <img src="img/monde-meilleur.jpg"/>
+                </section>
+
+                <section>
+                    <h2>Merci</h2>
                 </section>
 
             </div>
