--- a/source/presentations/framework-interop-fr/index.html
+++ b/source/presentations/framework-interop-fr/index.html
@@ -341,6 +341,8 @@ interface ContainerInterface
                     <h2>Layout</h2>
                     <pre><code data-trim>
 app/
+    config/
+        config.php // Configuration du container
     frontend/
         module.php // Silex -> retourne l'application Silex
     blog/
