Presentation: framework interop

--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -14,7 +14,15 @@ footer: true
         <h3>
             <a href="/presentations/di-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
         </h3>
-        <p>Présentation à l'apéro PHP de l'AFUP d'octobre 2013.</p>
+        <p>Présentation à l'apéro PHP de l'AFUP d'Octobre 2013.</p>
     </div>
-    <div class="span6"></div>
+    <div class="span6 thumbnail">
+        <a href="/presentations/framework-interop-fr/" title="Voir la présentation">
+            <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
+        </a>
+        <h3>
+            <a href="/presentations/framework-interop-fr/" title="Voir la présentation">[FR] Interopérabilité cross-frameworks</a>
+        </h3>
+        <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
+    </div>
 </div>
