--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -7,6 +7,17 @@ footer: true
 ---
 
 <div class="row-fluid">
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/di/" title="View the slides">
+            <img src="/images/presentations/di.png" alt="Dependency Injection & Containers">
+        </a>
+        <h3>
+            <a href="/presentations/di/" title="View the slides">Dependency Injection & Containers</a>
+        </h3>
+        <p>Talk at the Wellington PHP Meetup, November 2014.</p>
+    </div>
+
     <div class="span6 thumbnail">
         <a href="/presentations/di-fr/" title="Voir la présentation">
             <img src="/images/presentations/di-fr.png" alt="Injection de dépendances">
@@ -16,6 +27,7 @@ footer: true
         </h3>
         <p>Présentation à l'apéro PHP de l'AFUP d'Octobre 2013.</p>
     </div>
+
     <div class="span6 thumbnail">
         <a href="/presentations/framework-interop-fr/" title="Voir la présentation">
             <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
@@ -25,4 +37,5 @@ footer: true
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
     </div>
+
 </div>
