--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -19,16 +19,6 @@ footer: true
     </div>
 
     <div class="span6 thumbnail">
-        <a href="/presentations/di-fr/" title="Voir la présentation">
-            <img src="/images/presentations/di-fr.png" alt="Injection de dépendances">
-        </a>
-        <h3>
-            <a href="/presentations/di-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
-        </h3>
-        <p>Présentation à l'apéro PHP de l'AFUP d'Octobre 2013.</p>
-    </div>
-
-    <div class="span6 thumbnail">
         <a href="/presentations/framework-interop-fr/" title="Voir la présentation">
             <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
         </a>
@@ -36,6 +26,20 @@ footer: true
             <a href="/presentations/framework-interop-fr/" title="Voir la présentation">[FR] Interopérabilité cross-frameworks</a>
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
+    </div>
+
+</div>
+
+<div class="row-fluid">
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/di-fr/" title="Voir la présentation">
+            <img src="/images/presentations/di-fr.png" alt="Injection de dépendances">
+        </a>
+        <h3>
+            <a href="/presentations/di-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
+        </h3>
+        <p>Présentation à l'apéro PHP de l'AFUP d'Octobre 2013.</p>
     </div>
 
 </div>
