--- a/source/presentations/di/index.html
+++ b/source/presentations/di/index.html
@@ -47,8 +47,8 @@
                     </ul>
                 </section>
 
-                <section data-background="#bb7a6e">
-                    <h2>But first</h2>
+                <section>
+                    <h2>Survey</h2>
                 </section>
 
                 <section>
@@ -167,7 +167,6 @@ class PdfReportGenerator
 
                 <section data-background="#bb7a6e">
                     <h2>Hardcoded dependencies</h2>
-                    <p>Piwik example:</p>
                     <pre><code data-trim>
 public function copyData($fromDatabase, $toDatabase) {
     $data = Db::selectAll('my_data');
