--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -10,29 +10,39 @@ footer: true
     Here are some projects of mine on GitHub:
 </p>
 
-<div id="githubRepositories"></div>
+<div class="row">
+    <div class="span6 repo" data-user="mnapoli" id="PHP-DI"></div>
+    <div class="span6 repo" data-user="mnapoli" id="silly"></div>
+</div>
+<div class="row">
+    <div class="span6 repo" data-user="CouscousPHP" id="Couscous"></div>
+    <div class="span6 repo" data-user="mnapoli" id="FrontYaml"></div>
+</div>
+<div class="row">
+    <div class="span6 repo" data-user="mnapoli" id="Invoker"></div>
+    <div class="span6 repo" data-user="myclabs" id="php-enum"></div>
+</div>
+<div class="row">
+    <div class="span6 repo" data-user="myclabs" id="ACL"></div>
+    <div class="span6 repo" data-user="myclabs" id="Work"></div>
+</div>
+<div class="row">
+    <div class="span6 repo" data-user="myclabs" id="DeepCopy"></div>
+    <div class="span6 repo" data-user="myclabs" id="ArrayComparator"></div>
+</div>
+<div class="row">
+    <div class="span6 repo" data-user="mnapoli" id="IsItMaintained"></div>
+    <div class="span6 repo" data-user="piwik" id="ci-status"></div>
+</div>
 
 <script>
     $(function() {
-        SHOWOFF.load(
-            'githubRepositories',
-            {
-                'mnapoli': [
-                    'PHP-DI',
-                    'phpBeanstalkdAdmin',
-                    'NumberTwo',
-                    'gh-pages-compiler',
-                    'MniPagesBundle'
-                ],
-                'myclabs': [
-                    'php-enum',
-                    'Xport',
-                    'ArrayComparator'
-                ],
-                'wikt': [
-                    'wikt'
-                ]
-            }
-        );
+        $('.repo').each(function () {
+            Github.repoProfile({
+                username: $(this).data('user'),
+                reponame: $(this).attr('id'),
+                selector: '#' + $(this).attr('id')
+            });
+        });
     });
 </script>
