--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -1,12 +1,22 @@
 ---
 layout: page
-title: "Presentations"
+title: "Talks"
 comments: false
 sharing: true
 footer: true
 ---
 
 <div class="row-fluid">
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/psr-0-12/" title="See the slides">
+            <img src="/images/presentations/framework-interop-fr.png" alt="PSR-0 to 12">
+        </a>
+        <h3>
+            <a href="/presentations/psr-0-12/" title="See the slides">PSR-0 to 12</a>
+        </h3>
+        <p>Présentation au pot Symfony de l'AFSY Lyon de Décembre 2015.</p>
+    </div>
 
     <div class="span6 thumbnail">
         <a href="/presentations/di/" title="View the slides">
@@ -18,26 +28,26 @@ footer: true
         <p>Talk at the Wellington PHP Meetup, November 2014.</p>
     </div>
 
-    <div class="span6 thumbnail">
-        <a href="/presentations/framework-interop-fr/" title="Voir la présentation">
-            <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
-        </a>
-        <h3>
-            <a href="/presentations/framework-interop-fr/" title="Voir la présentation">[FR] Interopérabilité cross-frameworks</a>
-        </h3>
-        <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
-    </div>
-
 </div>
 
 <div class="row-fluid">
 
     <div class="span6 thumbnail">
-        <a href="/presentations/di-fr/" title="Voir la présentation">
+        <a href="/presentations/framework-interop-fr/" title="See the slides">
+            <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
+        </a>
+        <h3>
+            <a href="/presentations/framework-interop-fr/" title="See the slides">[FR] Interopérabilité cross-frameworks</a>
+        </h3>
+        <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
+    </div>
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/di-fr/" title="See the slides">
             <img src="/images/presentations/di-fr.png" alt="Injection de dépendances">
         </a>
         <h3>
-            <a href="/presentations/di-fr/" title="Voir la présentation">[FR] Injection de dépendances, Containers & PHP-DI</a>
+            <a href="/presentations/di-fr/" title="See the slides">[FR] Injection de dépendances, Containers & PHP-DI</a>
         </h3>
         <p>Présentation à l'apéro PHP de l'AFUP d'Octobre 2013.</p>
     </div>
