--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -6,6 +6,14 @@ sharing: true
 footer: true
 ---
 
+<h2>Videos</h2>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/fPpGIgeKTv0" frameborder="0" allowfullscreen></iframe>
+
+<hr>
+
+<h2>Slides</h2>
+
 <div class="row-fluid">
 
     <div class="span6 thumbnail">
