--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -17,6 +17,16 @@ footer: true
 <div class="row-fluid">
 
     <div class="span6 thumbnail">
+        <a href="/presentations/ddd-day/" title="See the slides">
+            <img src="/images/presentations/ddd-day.png">
+        </a>
+        <h3>
+            <a href="/presentations/ddd-day/" title="See the slides">[FR] Get Off My Domain</a>
+        </h3>
+        <p>Introduction à la modélisation du domaine dans l'approche DDD.</p>
+    </div>
+
+    <div class="span6 thumbnail">
         <a href="/presentations/psr-0-12/" title="See the slides">
             <img src="/images/presentations/psr-0-12.png" alt="PSR-0 to 12">
         </a>
@@ -25,6 +35,10 @@ footer: true
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Décembre 2015.</p>
     </div>
+
+</div>
+
+<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/di/" title="View the slides">
@@ -36,10 +50,6 @@ footer: true
         <p>Talk at the Wellington PHP Meetup, November 2014.</p>
     </div>
 
-</div>
-
-<div class="row-fluid">
-
     <div class="span6 thumbnail">
         <a href="/presentations/framework-interop-fr/" title="See the slides">
             <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
@@ -49,6 +59,10 @@ footer: true
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
     </div>
+
+</div>
+
+<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/di-fr/" title="See the slides">
