--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -8,7 +8,14 @@ footer: true
 
 <h2>Videos</h2>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/fPpGIgeKTv0" frameborder="0" allowfullscreen></iframe>
+<div class="row-fluid">
+    <div class="span6">
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/fPpGIgeKTv0" frameborder="0" allowfullscreen></iframe>
+    </div>
+    <div class="span6">
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Yj_2hUE-Lio?list=PLGlYeGauEwnvAsDzJr9DlLYP09UIWoW2I" frameborder="0" allowfullscreen></iframe>
+    </div>
+</div>
 
 <hr>
 
