--- a/source/presentations/phptour-open-source/index.html
+++ b/source/presentations/phptour-open-source/index.html
@@ -47,7 +47,15 @@
             max-width: 100%;
         }
         blockquote {
-            font-size: 59px;
+            color: darkgrey;
+            font-style: italic;
+            padding-left: 1em;
+            border-left: 1px solid #777872;
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .big blockquote {
+            font-size: 50px;
             color: black;
             font-style: italic;
             padding-left: 1em;
@@ -120,6 +128,13 @@
         }
         .clear {
             clear: both;
+        }
+        .footer {
+            font-size: 0.7em;
+            font-style: italic;
+            color: darkgrey;
+            padding-top: 30px;
+            display: inline-block;
         }
 
         .profile-picture {
