--- a/source/presentations/phptour-open-source/index.html
+++ b/source/presentations/phptour-open-source/index.html
@@ -148,6 +148,13 @@
             border-radius: 50%;
             border: solid 1px #CCCCCC;
         }
+        .company-logo {
+            float: right;
+            margin-top: 95px;
+        }
+        .company-logo img {
+            width: 185px;
+        }
 
         .full-image img {
             position: fixed;
