--- a/source/presentations/phptour-open-source/index.html
+++ b/source/presentations/phptour-open-source/index.html
@@ -107,7 +107,7 @@
         .remark-slide>.title {
             vertical-align: middle;
             text-align: center;
-            background: #4078c0;
+            background: #272727;
             color: white;
             text-shadow: 0 0 20px #333;
         }
@@ -136,13 +136,19 @@
             padding-top: 30px;
             display: inline-block;
         }
+        .small {
+            font-size: 0.8em;
+        }
 
+        .profile h2 {
+            margin-bottom: 25px;
+        }
         .profile-picture {
             float: left;
-            width: 145px;
+            width: 120px;
             margin-right: 30px;
             margin-top: 30px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
         }
         .profile-picture img {
             border-radius: 50%;
@@ -150,18 +156,27 @@
         }
         .company-logo {
             float: right;
-            margin-top: 95px;
+            margin-top: 83px;
         }
         .company-logo img {
-            width: 185px;
+            width: 200px;
+        }
+        .profile ul {
+            font-size: 0.9em;
         }
 
-        .full-image img {
+        .full-image {
+            color: white;
+        }
+        .full-image img:first-of-type {
             position: fixed;
             left: 0;
             top: 0;
             width: 100%;
             height: 100%;
+        }
+        .full-image h1 {
+            position: relative;
         }
     </style>
 </head>
