--- a/source/presentations/phptour-open-source/index.html
+++ b/source/presentations/phptour-open-source/index.html
@@ -136,8 +136,22 @@
             padding-top: 30px;
             display: inline-block;
         }
+        .title .footer {
+            position: absolute;
+            bottom: 50px;
+            padding: 0;
+            left: 0;
+            right: 0;
+            text-align: center;
+        }
+        .title .footer a {
+            color: #9C9C9C;
+        }
         .small {
             font-size: 0.8em;
+        }
+        .opacity {
+            opacity: 0.5;
         }
 
         .profile h2 {
@@ -145,7 +159,7 @@
         }
         .profile-picture {
             float: left;
-            width: 120px;
+            width: 65px;
             margin-right: 30px;
             margin-top: 30px;
             margin-bottom: 20px;
@@ -154,15 +168,11 @@
             border-radius: 50%;
             border: solid 1px #CCCCCC;
         }
-        .company-logo {
-            float: right;
-            margin-top: 83px;
-        }
         .company-logo img {
-            width: 200px;
+            width: 180px;
         }
         .profile ul {
-            font-size: 0.9em;
+            font-size: 0.8em;
         }
 
         .full-image {
