--- a/source/presentations/phptour-open-source/index.html
+++ b/source/presentations/phptour-open-source/index.html
@@ -3,11 +3,8 @@
 <head>
     <title>Lancez-vous dans l'open source !</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="font/fonts.css">
     <style>
-        @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-        @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-        @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
         * {
             box-sizing: border-box;
         }
@@ -152,6 +149,9 @@
         }
         .opacity {
             opacity: 0.5;
+        }
+        .text-muted {
+            color: grey;
         }
 
         .profile h2 {
