--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -24,6 +24,16 @@ footer: true
 <div class="row-fluid">
 
     <div class="span6 thumbnail">
+        <a href="/presentations/phptour-open-source/" title="See the slides">
+            <img src="/images/presentations/phptour-open-source.png">
+        </a>
+        <h3>
+            <a href="/presentations/phptour-open-source/" title="See the slides">[FR] Lancez-vous dans l'open source</a>
+        </h3>
+        <p>Un retour d'expérience sur la création de projets open sources.</p>
+    </div>
+
+    <div class="span6 thumbnail">
         <a href="/presentations/ddd-day/" title="See the slides">
             <img src="/images/presentations/ddd-day.png">
         </a>
@@ -32,6 +42,10 @@ footer: true
         </h3>
         <p>Introduction à la modélisation du domaine dans l'approche DDD.</p>
     </div>
+
+</div>
+
+<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/psr-0-12/" title="See the slides">
@@ -43,10 +57,6 @@ footer: true
         <p>Présentation au pot Symfony de l'AFSY Lyon de Décembre 2015.</p>
     </div>
 
-</div>
-
-<div class="row-fluid">
-
     <div class="span6 thumbnail">
         <a href="/presentations/di/" title="View the slides">
             <img src="/images/presentations/di.png" alt="Dependency Injection & Containers">
@@ -57,6 +67,10 @@ footer: true
         <p>Talk at the Wellington PHP Meetup, November 2014.</p>
     </div>
 
+</div>
+
+<div class="row-fluid">
+
     <div class="span6 thumbnail">
         <a href="/presentations/framework-interop-fr/" title="See the slides">
             <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
@@ -66,10 +80,6 @@ footer: true
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
     </div>
-
-</div>
-
-<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/di-fr/" title="See the slides">
