--- a/source/presentations/workshop-middlewares/index.html
+++ b/source/presentations/workshop-middlewares/index.html
@@ -147,6 +147,16 @@
         .small {
             font-size: 0.8em;
         }
+        .left-block {
+            float: left;
+            width: 50%;
+            font-size: 0.9em;
+        }
+        .right-block {
+            float: right;
+            width: 50%;
+            font-size: 0.9em;
+        }
         .opacity {
             opacity: 0.5;
         }
