--- a/source/presentations/workshop-middlewares/index.html
+++ b/source/presentations/workshop-middlewares/index.html
@@ -18,12 +18,6 @@
         h2 img {
             height: 35px;
         }
-        h2 a:last-child {
-            float: right;
-            font-size: 30px;
-            line-height: 65px;
-            text-decoration: none;
-        }
         p img, li img {
             vertical-align: top;
         }
@@ -33,7 +27,7 @@
         }
         pre {
             border: solid 1px #E2E2E2;
-            background: #F3F3F3;
+            background: #F0F0F0;
             padding: 20px;
             line-height: 27px;
         }
@@ -147,6 +141,9 @@
         .small {
             font-size: 0.8em;
         }
+        .small pre code {
+            font-size: 15px;
+        }
         .left-block {
             float: left;
             width: 50%;
@@ -197,6 +194,10 @@
         }
         .full-image h1 {
             position: relative;
+        }
+        .scroll {
+            max-height: 100%;
+            overflow-y: auto;
         }
     </style>
 </head>
