--- a/source/presentations/workshop-middlewares/index.html
+++ b/source/presentations/workshop-middlewares/index.html
@@ -143,6 +143,7 @@
         }
         .small pre code {
             font-size: 15px;
+            line-height: 20px;
         }
         .left-block {
             float: left;
@@ -197,7 +198,7 @@
         }
         .scroll {
             max-height: 100%;
-            overflow-y: auto;
+            overflow: scroll;
         }
     </style>
 </head>
