--- a/source/presentations/forumphp-middlewares/index.html
+++ b/source/presentations/forumphp-middlewares/index.html
@@ -57,22 +57,6 @@
         table tbody tr:nth-of-type(odd) {
             background-color: #f9f9f9;
         }
-        .remark-slide>.title {
-            vertical-align: middle;
-            text-align: center;
-            background: #272727;
-            color: white;
-            text-shadow: 0 0 20px #333;
-        }
-        .remark-slide>.title h1 {
-            font-size: 100px;
-        }
-        .remark-slide>.title h1, .remark-slide>.inverse h2 {
-            color: #f3f3f3;
-        }
-        .remark-slide>.title a {
-            color: white;
-        }
         .remark-slide-number {
             font-size: 18px;
         }
@@ -130,27 +114,14 @@
         .profile ul {
             font-size: 0.8em;
         }
-
-        .full-image {
-            color: white;
-        }
-        .full-image img:first-of-type {
-            position: fixed;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-        }
-        .full-image h1 {
-            position: relative;
-        }
     </style>
     <script src="js/remark.min.js"></script>
 </head>
 <body>
     <script>
         remark.create({
-            sourceUrl: 'source.md'
+            sourceUrl: 'source.md',
+            ratio: '16:9'
         });
     </script>
 </body>
