Revert "Reformat to 4:3"
This reverts commit 187653656c965a55728c34c90606b4f7f0f9088b.

--- a/source/presentations/forumphp-middlewares/index.html
+++ b/source/presentations/forumphp-middlewares/index.html
@@ -108,6 +108,9 @@
             border-radius: 50%;
             border: solid 1px #CCCCCC;
         }
+        .company-logo img {
+            width: 180px;
+        }
         .profile ul {
             font-size: 0.8em;
         }
@@ -118,7 +121,7 @@
     <script>
         remark.create({
             sourceUrl: 'source.md',
-            ratio: '4:3'
+            ratio: '16:9'
         });
     </script>
 </body>
