--- a/source/presentations/workshop-middlewares/index.html
+++ b/source/presentations/workshop-middlewares/index.html
@@ -111,6 +111,22 @@
         .remark-slide>.title a {
             color: white;
         }
+
+        .remark-slide>.main-title {
+            vertical-align: middle;
+            text-align: center;
+            background: #272727;
+            color: white;
+        }
+        .remark-slide>.main-title h1 {
+            font-size: 70px;
+            color: #f3f3f3;
+        }
+        .remark-slide>.main-title em {
+            font-style: normal;
+            color: #92A4CC;
+        }
+
         .remark-slide-number {
             font-size: 18px;
         }
