Add videos and slides

--- a/source/presentations/index.html
+++ b/source/presentations/index.html
@@ -10,6 +10,19 @@ footer: true
 
 <div class="row-fluid">
     <div class="span6">
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Qma1HZ3gsu8" frameborder="0" allowfullscreen></iframe>
+        <p>
+            <a href="https://joind.in/event/forum-php-2016/middlewares--un-vieux-concept-au-coeur-des-nouvelles-architectures">Joind.in</a></p>
+    </div>
+    <div class="span6">
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/HTx80GS66e0" frameborder="0" allowfullscreen></iframe>
+        <p>
+            <a href="https://joind.in/event/php-tour-clermont-ferrand-2016/lancez-vous-dans-lopen-source-">Joind.in</a></p>
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span6">
         <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Yj_2hUE-Lio?list=PLGlYeGauEwnvAsDzJr9DlLYP09UIWoW2I" frameborder="0" allowfullscreen></iframe>
     </div>
     <div class="span6">
@@ -24,13 +37,45 @@ footer: true
 <div class="row-fluid">
 
     <div class="span6 thumbnail">
+        <a href="/presentations/forumphp-middlewares/" title="See the slides">
+            <img src="/images/presentations/forumphp-middlewares.png">
+        </a>
+        <h3>
+            <a href="/presentations/forumphp-middlewares/" title="See the slides">[FR] Middlewares : un vieux concept au coeur des nouvelles architectures</a>
+        </h3>
+        <p>
+            Conférence donnée au <a href="http://event.afup.org/forum-php-2016/home-forum-php-2016/">ForumPHP 2016</a>.
+            <a href="https://joind.in/event/forum-php-2016/middlewares--un-vieux-concept-au-coeur-des-nouvelles-architectures">Joind.in</a>.
+            <a href="https://www.youtube.com/watch?v=Qma1HZ3gsu8">Video</a>
+        </p>
+    </div>
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/workshop-middlewares/" title="See the slides">
+            <img src="/images/presentations/workshop-middlewares.png">
+        </a>
+        <h3>
+            <a href="/presentations/workshop-middlewares/" title="See the slides">[FR] Middleware Workshop</a>
+        </h3>
+        <p>Workshop d'introduction aux middlewares en PHP.</p>
+    </div>
+
+</div>
+
+<div class="row-fluid">
+
+    <div class="span6 thumbnail">
         <a href="/presentations/phptour-open-source/" title="See the slides">
             <img src="/images/presentations/phptour-open-source.png">
         </a>
         <h3>
             <a href="/presentations/phptour-open-source/" title="See the slides">[FR] Lancez-vous dans l'open source</a>
         </h3>
-        <p>Un retour d'expérience sur la création de projets open sources.</p>
+        <p>
+            Conférence donnée au <a href="http://event.afup.org/php-tour-2016/home-phptour-2016/">PHPTour 2016</a>.
+            <a href="https://joind.in/event/php-tour-clermont-ferrand-2016/lancez-vous-dans-lopen-source-">Joind.in</a>.
+            <a href="https://www.youtube.com/watch?v=HTx80GS66e0">Video</a>
+        </p>
     </div>
 
     <div class="span6 thumbnail">
