--- a/source/projects/index.html
+++ b/source/projects/index.html
@@ -19,6 +19,10 @@ footer: true
     <div class="span6 repo" data-user="mnapoli" id="FrontYaml"></div>
 </div>
 <div class="row">
+    <div class="span6 repo" data-user="mnapoli" id="IsItMaintained"></div>
+    <div class="span6 repo" data-user="mnapoli" id="externals"></div>
+</div>
+<div class="row">
     <div class="span6 repo" data-user="mnapoli" id="Invoker"></div>
     <div class="span6 repo" data-user="myclabs" id="php-enum"></div>
 </div>
@@ -29,10 +33,6 @@ footer: true
 <div class="row">
     <div class="span6 repo" data-user="myclabs" id="DeepCopy"></div>
     <div class="span6 repo" data-user="myclabs" id="ArrayComparator"></div>
-</div>
-<div class="row">
-    <div class="span6 repo" data-user="mnapoli" id="IsItMaintained"></div>
-    <div class="span6 repo" data-user="piwik" id="ci-status"></div>
 </div>
 
 <script>
