--- a/presentations/phpce-middlewares/index.html
+++ b/presentations/phpce-middlewares/index.html
@@ -97,19 +97,8 @@
         .profile h2 {
             margin-bottom: 25px;
         }
-        .profile-picture {
-            float: left;
-            width: 65px;
-            margin-right: 30px;
-            margin-top: 30px;
-            margin-bottom: 20px;
-        }
-        .profile-picture img {
-            border-radius: 50%;
-            border: solid 1px #CCCCCC;
-        }
-        .profile ul {
-            font-size: 0.8em;
+        .profile .company-logo {
+            float: right;
         }
     </style>
     <script src="js/remark.min.js"></script>
