--- a/presentations/workshop-middlewares/index.html
+++ b/presentations/workshop-middlewares/index.html
@@ -178,27 +178,6 @@
             color: grey;
         }
 
-        .profile h2 {
-            margin-bottom: 25px;
-        }
-        .profile-picture {
-            float: left;
-            width: 65px;
-            margin-right: 30px;
-            margin-top: 30px;
-            margin-bottom: 20px;
-        }
-        .profile-picture img {
-            border-radius: 50%;
-            border: solid 1px #CCCCCC;
-        }
-        .company-logo img {
-            width: 180px;
-        }
-        .profile ul {
-            font-size: 0.8em;
-        }
-
         .full-image {
             color: white;
         }
@@ -215,6 +194,12 @@
         .scroll {
             max-height: 100%;
             overflow: scroll;
+        }
+        .profile h2 {
+            margin-bottom: 25px;
+        }
+        .profile .company-logo {
+            float: right;
         }
     </style>
 </head>
