--- a/presentations/index.html
+++ b/presentations/index.html
@@ -6,25 +6,28 @@ sharing: true
 footer: true
 ---
 
+<p>This page lists the talks I gave at conferences and meetups. Slides are below the videos.</p>
+
 <h2>Videos</h2>
 
 <div class="row-fluid">
     <div class="span6">
-        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Qma1HZ3gsu8" frameborder="0" allowfullscreen></iframe>
-        <p>
-            <a href="https://joind.in/event/forum-php-2016/middlewares--un-vieux-concept-au-coeur-des-nouvelles-architectures">Joind.in</a></p>
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/64TH94pclyU" frameborder="0" allowfullscreen></iframe>
+        <p><a href="https://joind.in/event/php-central-europe-conference/middleware-based-architectures">Joind.in</a></p>
     </div>
     <div class="span6">
-        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/HTx80GS66e0" frameborder="0" allowfullscreen></iframe>
-        <p>
-            <a href="https://joind.in/event/php-tour-clermont-ferrand-2016/lancez-vous-dans-lopen-source-">Joind.in</a></p>
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Qma1HZ3gsu8" frameborder="0" allowfullscreen></iframe>
+        <p><a href="https://joind.in/event/forum-php-2016/middlewares--un-vieux-concept-au-coeur-des-nouvelles-architectures">Joind.in</a></p>
     </div>
-</div>
-
-<div class="row-fluid">
+</div><div class="row-fluid">
+    <div class="span6">
+        <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/HTx80GS66e0" frameborder="0" allowfullscreen></iframe>
+        <p><a href="https://joind.in/event/php-tour-clermont-ferrand-2016/lancez-vous-dans-lopen-source-">Joind.in</a></p>
+    </div>
     <div class="span6">
         <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/Yj_2hUE-Lio?list=PLGlYeGauEwnvAsDzJr9DlLYP09UIWoW2I" frameborder="0" allowfullscreen></iframe>
     </div>
+</div><div class="row-fluid">
     <div class="span6">
         <iframe style="width: 100%; min-height: 315px" src="https://www.youtube.com/embed/fPpGIgeKTv0" frameborder="0" allowfullscreen></iframe>
     </div>
@@ -35,6 +38,20 @@ footer: true
 <h2>Slides</h2>
 
 <div class="row-fluid">
+
+    <div class="span6 thumbnail">
+        <a href="/presentations/phpce-middlewares/" title="See the slides">
+            <img src="/images/presentations/phpce-middlewares.png">
+        </a>
+        <h3>
+            <a href="/presentations/phpce-middlewares/" title="See the slides">[EN] Middleware-based architectures</a>
+        </h3>
+        <p>
+            Conference at <a href="https://2017.phpce.eu/">phpCE 2017</a>.
+            <a href="https://joind.in/event/php-central-europe-conference/middleware-based-architectures">Joind.in</a>.
+            <a href="https://www.youtube.com/watch?v=64TH94pclyU">Video</a>
+        </p>
+    </div>
 
     <div class="span6 thumbnail">
         <a href="/presentations/forumphp-middlewares/" title="See the slides">
@@ -50,6 +67,8 @@ footer: true
         </p>
     </div>
 
+</div><div class="row-fluid">
+
     <div class="span6 thumbnail">
         <a href="/presentations/workshop-middlewares/" title="See the slides">
             <img src="/images/presentations/workshop-middlewares.png">
@@ -59,10 +78,6 @@ footer: true
         </h3>
         <p>Workshop d'introduction aux middlewares en PHP.</p>
     </div>
-
-</div>
-
-<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/phptour-open-source/" title="See the slides">
@@ -78,6 +93,8 @@ footer: true
         </p>
     </div>
 
+</div><div class="row-fluid">
+
     <div class="span6 thumbnail">
         <a href="/presentations/ddd-day/" title="See the slides">
             <img src="/images/presentations/ddd-day.png">
@@ -87,10 +104,6 @@ footer: true
         </h3>
         <p>Introduction à la modélisation du domaine dans l'approche DDD.</p>
     </div>
-
-</div>
-
-<div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/psr-0-12/" title="See the slides">
@@ -102,6 +115,8 @@ footer: true
         <p>Présentation au pot Symfony de l'AFSY Lyon de Décembre 2015.</p>
     </div>
 
+</div><div class="row-fluid">
+
     <div class="span6 thumbnail">
         <a href="/presentations/di/" title="View the slides">
             <img src="/images/presentations/di.png" alt="Dependency Injection & Containers">
@@ -112,10 +127,6 @@ footer: true
         <p>Talk at the Wellington PHP Meetup, November 2014.</p>
     </div>
 
-</div>
-
-<div class="row-fluid">
-
     <div class="span6 thumbnail">
         <a href="/presentations/framework-interop-fr/" title="See the slides">
             <img src="/images/presentations/framework-interop-fr.png" alt="Injection de dépendances">
@@ -125,6 +136,8 @@ footer: true
         </h3>
         <p>Présentation au pot Symfony de l'AFSY Lyon de Janvier 2014.</p>
     </div>
+
+</div><div class="row-fluid">
 
     <div class="span6 thumbnail">
         <a href="/presentations/di-fr/" title="See the slides">
