--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
     <div class="container clearfix">
         <img class="avatar hidden-phone" src="https://github.com/mnapoli.png?size=140">
         Hi, I'm Matthieu Napoli!
-        <h3 class="tagline">These and thoughts and experiments about web development and programming.</h3>
+        <h3 class="tagline">These are thoughts and experiments about web development and programming.</h3>
     </div>
 </div>
 
